First Commit of ZeFish's Changes

--- a/design/am.realgamers_theme.css
+++ b/design/am.realgamers_theme.css
@@ -74,11 +74,7 @@ div.aboutme table#nameinfo td.name {
 
 div.aboutme div.photo {
 	float: left;
-}
-
-div.aboutme div.photo img {
-	width: 128px;
-	height: 128px;
+	position: absolute;
 }
 
 
